--- a/client/css/common.css
+++ b/client/css/common.css
@@ -9,8 +9,8 @@ body
 
     border: none;
 
-    background: #333333;
-    background: url('../images/wood.jpg');
+    background-color: #005737;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='58' height='58' viewBox='0 0 120 120'%3E%3Cpolygon fill='%23000000' fill-opacity='0.09' points='120 0 120 60 90 30 60 0 0 0 0 0 60 60 0 120 60 120 90 90 120 60 120 0'/%3E%3C/svg%3E");
 
     -webkit-touch-callout: none;
 
