--- a/client/css/game.css
+++ b/client/css/game.css
@@ -17,7 +17,12 @@ div.bottomShade table
 
 div#container
 {
-    width: 59em;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 div#letterbagStatus > div
@@ -39,7 +44,7 @@ div#controls > div
     border-color: #DCDCC6;
 
     border-style: solid;
-	
+
     -webkit-border-radius: 0.4em;
     -moz-border-radius: 0.4em;
     -ms-border-radius: 0.4em;
@@ -92,7 +97,7 @@ div#move {
 }
 
 div#chat {
-    height: 6em;
+    display: none;
 }
 
 div#chatLog {
@@ -163,7 +168,6 @@ div#boardWrap
 {
     margin-top: 1em;
     float: right;
-    width: 37em;
 }
 
 div.tableDivWrap table
@@ -373,7 +377,7 @@ div.tableDivWrap td div.Tile
     background-color: #F7F7E3;
     border-color: #DCDCC6;
     border-style: solid;
-	
+
     -webkit-border-radius: 0.2em;
     -moz-border-radius: 0.2em;
     -ms-border-radius: 0.2em;
@@ -436,7 +440,7 @@ div.tableDivWrap td div.Selected,
     -o-animation-iteration-count: infinite;
     -o-animation-direction: alternate;
     -o-animation-timing-function: linear;
-	
+
     animation-name: glow;
     animation-duration: 0.5s;
     animation-iteration-count: infinite;
