--- a/client/css/game.css
+++ b/client/css/game.css
@@ -1,13 +1,10 @@
-
-div.tableDivWrap
-{
+div.tableDivWrap {
     margin: 0;
     padding: 0;
 }
 
 div.surroundShade table,
-div.bottomShade table
-{
+div.bottomShade table {
     -webkit-box-shadow: 0 0 0.5em #000000;
     -moz-box-shadow: 0 0 0.5em #000000;
     -ms-box-shadow: 0 0 0.5em #000000;
@@ -15,41 +12,29 @@ div.bottomShade table
     box-shadow: 0 0 0.5em #000000;
 }
 
-div#container
-{
+div#container {
     width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
-div#letterbagStatus > div
-{
+div#letterbagStatus > div {
     margin: 0.5em;
+    text-align: right;
 }
 
-div#controls
-{
+div#controls {
     float: left;
     margin: 1em;
     margin-top: 2em;
     width: 19.5em;
 }
 
-div#controls > div
-{
-    background-color: #F7F7E3;
-    border-color: #DCDCC6;
-
-    border-style: solid;
-
-    -webkit-border-radius: 0.4em;
-    -moz-border-radius: 0.4em;
-    -ms-border-radius: 0.4em;
-    -o-border-radius: 0.4em;
-    border-radius: 0.4em;
+div#controls > div {
+    background-color: #ffffff61;
+    border-radius: 6px;
 
     margin-bottom: 0.4em;
     padding: 0.4em;
@@ -60,12 +45,17 @@ div#log {
     overflow: auto;
 }
 
+div#log ::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 div#log span.score {
     padding-left: 0.5em;
 }
 
 div#log .moveDetail {
-    margin-left: 4em;
+    text-align: right;
 }
 
 div#log > div {
@@ -89,7 +79,12 @@ div#scoreboard td.offline {
 }
 
 div#whosturn {
+    background: none !important;
+    border: 0px;
+    color: white;
+    font-weight: bold;
     height: 1em;
+    font-style: italic;
 }
 
 div#move {
@@ -129,14 +124,31 @@ div#blankLetterRequester {
 
 button {
     font-size: 1em;
+    color: white;
+    /* border-radius: 24px; */
+    background: #00000000;
+    padding: 8px 12px;
+    border: 1px solid white;
+}
+
+button:hover {
+    background: white;
+    color: #024f33;
+    cursor: pointer;
+}
+
+#rack {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
 }
 
 #rackButtons {
     margin-right: 0.5em;
 }
 
-#rack button {
-    font-size: 0.9em;
+#Shuffle {
+    display: none;
 }
 
 #TakeBackTiles {
@@ -164,46 +176,38 @@ div#rackButtons {
     horizontal-align: right;
 }
 
-div#boardWrap
-{
+div#boardWrap {
     margin-top: 1em;
     float: right;
 }
 
-div.tableDivWrap table
-{
+div.tableDivWrap table {
     border-collapse: separate;
     border-spacing: 0 0;
-
-    border-width: 0.2em;
-    border-style: solid;
-    border-color:  #54534A;
 
     margin-top: 1em;
     margin-bottom: 1em;
 
     padding: 0.2em;
 
-    background-color: #AAA38E;
+    background-color: #aaa38e;
 }
 
 div#rack table,
-div#swapRack table
-{
+div#swapRack table {
     border-width: 0.2em;
     padding: 0.2em;
 }
 
-div.tableDivWrap tr
-{
+div.tableDivWrap tr {
     margin: 0;
     padding: 0;
 
     border: none;
 }
 
-div.tableDivWrap td, div.tableDivWrap th
-{
+div.tableDivWrap td,
+div.tableDivWrap th {
     margin: 0;
     padding: 0;
 
@@ -215,54 +219,49 @@ div.tableDivWrap td, div.tableDivWrap th
     border-width: 0.122em;
     border-style: dotted;
 
-    background-color: #BEB9A6;
+    background-color: #beb9a6;
 }
 
-div.tableDivWrap td.Normal
-{
+div.tableDivWrap td.Normal {
     border-style: solid;
-    border-color: #AAA38E;
+    border-color: #aaa38e;
 }
 
 div.tableDivWrap td.DoubleWord,
 div.tableDivWrap td.TripleWord,
 div.tableDivWrap td.DoubleLetter,
-div.tableDivWrap td.TripleLetter
-{
-    background-color: #AAA38E;
+div.tableDivWrap td.TripleLetter {
+    background-color: #aaa38e;
 }
 
-div.tableDivWrap td.DoubleWord
-{
-    border-color: #FBBBB9;
+div.tableDivWrap td.DoubleWord {
+    border-color: #fbbbb9;
 }
 
-div.tableDivWrap td.TripleWord
-{
-    border-color: #F75D59;
+div.tableDivWrap td.TripleWord {
+    border-color: #f75d59;
 }
 
-div.tableDivWrap td.DoubleLetter
-{
-    border-color: #A0CFEC;
+div.tableDivWrap td.DoubleLetter {
+    border-color: #a0cfec;
 }
 
-div.tableDivWrap td.TripleLetter
-{
-    border-color: #157DEC;
+div.tableDivWrap td.TripleLetter {
+    border-color: #157dec;
 }
 
-div.tableDivWrap td div
-{
-    display: block;
+div.tableDivWrap td div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     margin: 0;
     padding: 0;
 
     border: none;
 
-    width: 2em;
-    height: 2em;
+    width: 2.2em;
+    height: 2.2em;
 
     border-style: solid;
     border-width: 0.15em;
@@ -274,8 +273,7 @@ div.tableDivWrap td div
     color: #333333;
 }
 
-div.tableDivWrap td div a
-{
+div.tableDivWrap td div a {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -294,88 +292,77 @@ div.tableDivWrap td div a
     text-align: center;
 }
 
-@-webkit-keyframes glow
-{
+@-webkit-keyframes glow {
     0% {
-        border: 0.15em solid #FF9900;
+        border: 0.15em solid #ff9900;
     }
     100% {
-        border: 0.15em solid #DC143C;
+        border: 0.15em solid #dc143c;
     }
 }
 
-@-moz-keyframes glow
-{
+@-moz-keyframes glow {
     0% {
-        border: 0.15em solid #FF9900;
+        border: 0.15em solid #ff9900;
     }
     100% {
-        border: 0.15em solid #DC143C;
+        border: 0.15em solid #dc143c;
     }
 }
 
-@keyframes glow
-{
+@keyframes glow {
     0% {
-        border: 0.15em solid #FFFFFF;
+        border: 0.15em solid #ffffff;
     }
     100% {
         border: 0.15em solid #333333;
     }
 }
 
-div.tableDivWrap td.DoubleWord div
-{
-    background-color: #FBBBB9;
-    border-color: #FBBBB9;
-    color: #F75D59;
+div.tableDivWrap td.DoubleWord div {
+    background-color: #fbbbb9;
+    border-color: #fbbbb9;
+    color: #f75d59;
 }
 
-div.tableDivWrap td.TripleWord div
-{
-    background-color: #F75D59;
-    border-color: #F75D59;
-    color: #8B0000;
+div.tableDivWrap td.TripleWord div {
+    background-color: #f75d59;
+    border-color: #f75d59;
+    color: #8b0000;
 }
 
-div.tableDivWrap td.Normal div
-{
-    background-color: #BEB9A6;
-    border-color: #BEB9A6;
+div.tableDivWrap td.Normal div {
+    background-color: #beb9a6;
+    border-color: #beb9a6;
 }
 
-div.tableDivWrap td.DoubleLetter div
-{
-    background-color: #A0CFEC;
-    border-color: #A0CFEC;
-    color: #157DEC;
+div.tableDivWrap td.DoubleLetter div {
+    background-color: #a0cfec;
+    border-color: #a0cfec;
+    color: #157dec;
 }
 
-div.tableDivWrap td.TripleLetter div
-{
-    background-color: #157DEC;
-    border-color: #157DEC;
+div.tableDivWrap td.TripleLetter div {
+    background-color: #157dec;
+    border-color: #157dec;
     color: #000080;
 }
 
-div.tableDivWrap td.SpecialField div.Empty a
-{
-    font-size: 0.50em;
-    padding-top: 0.0em;
+div.tableDivWrap td.SpecialField div.Empty a {
+    font-size: 0.5em;
+    padding-top: 0em;
     line-height: 1.4em;
-    letter-spacing: 0.0em;
+    letter-spacing: 0em;
 }
 
-div.tableDivWrap td.StartField div.Empty a
-{
+div.tableDivWrap td.StartField div.Empty a {
     font-size: 1.3em;
 }
 
-div.tableDivWrap td div.Tile
-{
+div.tableDivWrap td div.Tile {
     cursor: move;
-    background-color: #F7F7E3;
-    border-color: #DCDCC6;
+    background-color: #f7f7e3;
+    border-color: #dcdcc6;
     border-style: solid;
 
     -webkit-border-radius: 0.2em;
@@ -385,36 +372,30 @@ div.tableDivWrap td div.Tile
     border-radius: 0.2em;
 }
 
-div.tableDivWrap td div.Tile a
-{
+div.tableDivWrap td div.Tile a {
 }
 
-div.tableDivWrap td div.Locked
-{
+div.tableDivWrap td div.Locked {
     cursor: default;
     color: #474633;
 }
 
-div.tableDivWrap td div.Temp
-{
+div.tableDivWrap td div.Temp {
     border-color: #626258;
 }
 
-div.tableDivWrap td div.CenterStart
-{
-    border-color: #AAA38E;
+div.tableDivWrap td div.CenterStart {
+    border-color: #aaa38e;
 }
 
-div.tableDivWrap td div.Temp:hover
-{
+div.tableDivWrap td div.Temp:hover {
     color: #000000 !important;
 
-    border-color: #FF9900;
+    border-color: #ff9900;
 }
 
 div.tableDivWrap td div.Selected,
-.dragBorder
-{
+.dragBorder {
     color: #000000 !important;
 
     -webkit-animation-name: glow;
@@ -447,11 +428,10 @@ div.tableDivWrap td div.Selected,
     animation-direction: alternate;
     animation-timing-function: linear;
 
-    border-color: #DC143C !important;
+    border-color: #dc143c !important;
 }
 
-.dragBorder
-{
+.dragBorder {
     -webkit-box-shadow: 0px 0px 0.5em #333333;
     -moz-box-shadow: 0px 0px 0.5em #333333;
     -ms-box-shadow: 0px 0px 0.5em #333333;
@@ -462,22 +442,19 @@ div.tableDivWrap td div.Selected,
 }
 
 div.tableDivWrap td div.dropActive,
-div.tableDivWrap td div.Targeted
-{
+div.tableDivWrap td div.Targeted {
     cursor: pointer;
 
     border-color: #333333 !important;
 }
 
-div.tableDivWrap td div a span
-{
+div.tableDivWrap td div a span {
     margin: 0;
     padding: 0;
 }
 
 div.tableDivWrap td div.Tile a span.Letter,
-div.tableDivWrap td div.Tile a span.BlankLetter
-{
+div.tableDivWrap td div.Tile a span.BlankLetter {
     font-size: 1.2em;
     font-weight: normal;
 
@@ -486,95 +463,84 @@ div.tableDivWrap td div.Tile a span.BlankLetter
     padding-left: 0.2em;
 }
 
-@-moz-document url-prefix(http://)
-{
-	div.tableDivWrap td div.Tile a span.Letter,
-	div.tableDivWrap td div.Tile a span.BlankLetter
-    {
-	    line-height: 1.8em;
+@-moz-document url-prefix(http://) {
+    div.tableDivWrap td div.Tile a span.Letter,
+    div.tableDivWrap td div.Tile a span.BlankLetter {
+        line-height: 1.8em;
     }
 }
 
-div.tableDivWrap td div.Tile a span.Score
-{
+div.tableDivWrap td div.Tile a span.Score {
     font-size: 0.8em;
     vertical-align: sub;
     padding-left: 0.2em;
 }
 
-div.tableDivWrap td div.Cursor a
-{
-    line-height: 1.0em;
-    font-size: 2.0em;
+div.tableDivWrap td div.Cursor a {
+    line-height: 1em;
+    font-size: 2em;
     font-weight: normal;
-    color: #54534A;
+    color: #54534a;
 }
 
-div.tableDivWrap td div.CenterStart a
-{
+div.tableDivWrap td div.CenterStart a {
     font-size: 2.8em;
-    color: #54534A;
+    color: #54534a;
 }
 
 /*\*/
-@media screen and (-webkit-min-device-pixel-ratio:0)
-{
-    body:nth-of-type(1) div.tableDivWrap td div.CenterStart a
-    {
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+    body:nth-of-type(1) div.tableDivWrap td div.CenterStart a {
         margin-top: -0.22em;
         font-size: 1.8em;
     }
 }
 /**/
 
-@-moz-document url-prefix(http://)
-{
-    div.tableDivWrap td div.CenterStart a
-    {
+@-moz-document url-prefix(http://) {
+    div.tableDivWrap td div.CenterStart a {
         margin-top: -0.35em;
         font-size: 3.22em;
     }
 }
 
-div.tableDivWrap td div.BlankLetter a
-{
-    border-left: 0.2em solid #ADFF2F;
-    border-right: 0.2em solid #ADFF2F;
+div.tableDivWrap td div.BlankLetter a {
+    border-left: 0.2em solid #adff2f;
+    border-right: 0.2em solid #adff2f;
 }
 
-div.tableDivWrap td.Invalid
-{
+div.tableDivWrap td.Invalid {
     border-style: solid;
     border-color: red;
     background-color: red;
 }
 
-div.tableDivWrap td.Valid
-{
+div.tableDivWrap td.Valid {
     border-style: solid;
     border-color: green;
     background-color: green;
 }
 
-div.tableDivWrap td.ValidButWrongPlacement
-{
+div.tableDivWrap td.ValidButWrongPlacement {
     border-style: solid;
     border-color: orange;
     background-color: orange;
 }
 
-div#anagrams table
-{
+div#anagrams table {
     width: 80%;
 }
 
-div#anagrams td, div#anagrams th
-{
+div#anagrams td,
+div#anagrams th {
     margin: 0;
     padding: 1em;
 }
 
-div#anagrams th
-{
+div#anagrams th {
     border: none;
+}
+
+.gameStart {
+    display: none;
 }
