--- a/client/css/game.css
+++ b/client/css/game.css
@@ -54,6 +54,10 @@ div#log span.score {
     padding-left: 0.5em;
 }
 
+.score > button {
+    margin-left: 8px;
+}
+
 div#log .moveDetail {
     text-align: right;
 }
