--- a/client/css/page.css
+++ b/client/css/page.css
@@ -1,33 +1,55 @@
 body {
-    width: 45em;
+	width: 45em;
 }
 
 p {
-    margin-left: 3em;
-    margin-right: 3em;
+	margin-left: 3em;
+	margin-right: 3em;
 }
 
 fieldset {
-    background-color:rgba(255,255,255,0.5);
-    margin: 1em;
+	background-color: rgba(255, 255, 255, 0.5);
+	margin: 1em;
 }
 
 legend {
-    background-color:rgba(255,255,255,0.5);
+	background-color: rgba(255, 255, 255, 0.5);
 }
 
-label, input, button {
-    font-size: 1.5em;
+label,
+input,
+button {
+	font-size: 1.5em;
 }
 
-label, input {
-    display: inline-block;
-    width: 20em;
+label,
+input {
+	display: inline-block;
+	width: 20em;
 }
 
 label {
-    width: 4em;
+	width: 4em;
 }
 
 input {
+}
+
+.gamesBody {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
+	flex-direction: column;
+}
+
+.gamesTitle {
+    color: white;
+    font-weight: bold;
+    font-size: 61px;
+    text-align: center;
+    font-family: "Lobster";
+    margin: 48px;
+}
 }
